--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,4 @@
+version: '3.8'
 services:
   mongo:
     image: mongo:latest
@@ -18,6 +19,7 @@ services:
     volumes:
       # Add volume for development hot-reload
       - .:/app
+      - uploaded_files:/app/uploads
     depends_on:
       - mongo
     environment:
@@ -28,3 +30,4 @@ services:
 
 volumes:
   mongo_data:
+  uploaded_files:
