--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@ env
 .env
 keyfile
 __pycache__
-app/data/*
-generated_data/*
+data/*
 launch/generated_data/*.json
 launch/generated_data/*.csv
 Fox-Engine.pdf
